function(install_sample_source)
  if(INSTALL_SDK)
    get_filename_component(name ${CMAKE_CURRENT_SOURCE_DIR} NAME)
    foreach(file ${ARGV})
      install(FILES ${file} DESTINATION ${CNOID_SHARE_SUBDIR}/sample/${name}/)
    endforeach()
    install(FILES ManualMakefile DESTINATION ${CNOID_SHARE_SUBDIR}/sample/${name} RENAME Makefile)
  endif()
endfunction()

add_subdirectory(general)
add_subdirectory(customizer)
add_subdirectory(SimpleController)
add_subdirectory(SceneEffects)
add_subdirectory(SpringModel)
add_subdirectory(Submersible)
add_subdirectory(CollisionHandler)
add_subdirectory(ContactForceExtraction)
add_subdirectory(PoseSeq)
add_subdirectory(GRobotPlugin)
add_subdirectory(Multicopter)
add_subdirectory(AGXDynamics)
add_subdirectory(TrackedVehicle)
add_subdirectory(Roki)
add_subdirectory(JoystickTest)
add_subdirectory(WRS2018)
